# text2text-coref

./: pyproject.toml  readme.md
llm_output_cleaner/: convert.py  output_cleaner.py  readme.md  text2text_coref.py
src/text2text_coref/: __init__.py  __main__.py  convert.py  json_format.py  main.py  output_cleaner.py
